@@ -1,5 +1,9 @@
 <h2>Gestion des statuts</h2>
 
+<?php if ($sf_user->hasFlash('notice')): ?>
+	<div class="error"><?php echo $sf_user->getFlash('notice') ?></div>
+<?php endif; ?>
+
 <table class="tableauDonnees">
   <thead>
     <tr class="enteteTableauDonnees">
@@ -12,7 +16,7 @@
     <?php foreach ($statut_list as $statut): ?>
     <tr>
       <td><?php echo $statut->getNom() ?></td>
-      <td><?php echo $statut->countMembers() ?></td>
+      <td><?php echo $statut->countMembres() ?></td>
       <td>
       	<?php echo link_to(image_tag('details.png', array('alt' => '[détails]')), 'statut/show?id=' . $statut->getId()) ?>
         <?php echo link_to(image_tag('edit.png', array('alt' => '[éditer]')), 'statut/edit?id=' . $statut->getId()) ?>
